--- a/www/contactus.html
+++ b/www/contactus.html
@@ -70,12 +70,31 @@
     <main>
         <div class="container">
             <div class="row">
-                <h3 id="type" class="left col s12 m12">Reservations</h3>
-                <button id="logout" class="btn waves-effect waves-light" onclick="logout()">
-                    Log out
-                    <i class="material-icons right">exit_to_app</i>
-                </button>
-                <h4 id="empty">No events booked</h4>
+                <div>
+                    <h3 id="type" class="left col s12 m12">Contact us</h3>
+                </div>
+                <div class="divider"></div>
+                <div class="left col s12 m12">
+                    <h4>Who are we</h4>
+                    <p>
+                        We are a young organization providing logistics and preprations for long running events, attracting thousands of people over a long period i festivals and the likes.
+                        <br />
+                        If you need to build up a place for tourists and artists to fully enjoy experiences like nowhere else, we're the right choice. Be sure to reach out to us to see how many outdoor events we're currently managing, both on rental sites and on our own land.
+                    </p>
+                    <div class="divider"></div>
+                    <h4>Contact information</h4>
+                    <p>
+                        Find us at:
+                        <br />
+                        Festival,
+                        <br />
+                        1, Woods street,
+                        <br />
+                        Sherwoods EZGG 420
+                        <br /><br />
+                        You can also email us at <a href="mailto:giuseppe.lonardoni@mail.polimi.it">this</a> e-mail address.
+                    </p>
+                </div>
             </div>
             <div class="section">
                 <div></div>
@@ -124,86 +143,6 @@
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
     <script src="/statics/js/checkLogin.js"></script>
-
-    <template id="template-event">
-        <div>
-            <p></p>
-            <a href="" style="text-decoration: none; color: inherit;">
-                <h6 style="display: inline;padding-right: 20px">Title</h6>
-            </a>
-            <p id="plot" style="display: inline;">Lorem ipsum dolor sit amet, quem populo at sed, eos mundi lucilius id. Vel id fastidii voluptua reprehendunt. Eirmod debitis detracto ex est, te his justo placerat abhorreant. Sea in erant diceret evertitur, no sonet corpora voluptaria nam. Dicta probatus ius te, no eum integre dissentiet deterruisset. Percipit detraxit facilisi ex eam. No harum neglegentur cum, exerci adipisci periculis has in.</p>
-            <button id="remove" class="btn waves-effect waves-light">
-                Remove
-                <i class="material-icons right">exit_to_app</i>
-            </button>
-            <p></p>
-            <div class="divider"></div>
-        </div>
-    </template>
-    <script>
-        let xhr = new XMLHttpRequest();
-        xhr.open( "GET", "/v2/user/cart" );
-        xhr.onload = function () {
-            if ( this.responseText == 0 ) {
-                console.log( "Server DB empy response" );
-            }
-            else {
-                let events_array = JSON.parse( this.responseText );
-                if ( events_array.length != 0 ) {
-                    document.getElementById( "empty" ).style.display = "none";
-                }
-                for ( let i = 0; i < events_array.length; i++ ) {
-                    let temp = document.getElementById( "template-event" );
-                    let event = temp.content.cloneNode( true );
-                    event = event.firstElementChild;
-                    event.setAttribute( "id", events_array[i].EventID );
-                    event.querySelector( "a" ).setAttribute( "href", "/events/" + events_array[i].EventID );
-                    event.querySelector( "h6" ).innerHTML = events_array[i].Title;
-                    event.querySelector( "#plot" ).innerHTML = events_array[i].Facts;
-                    event.querySelector( "#remove" ).setAttribute( "onclick", "remove(" + events_array[i].EventID + ")" );
-                    event.querySelector( "#remove" ).setAttribute( "id", "button_" + events_array[i].EventID );
-                    let eElement = document.getElementsByClassName( "section" )[0];
-                    eElement.insertBefore( event, eElement.firstChild );
-                }
-            }
-        }
-        xhr.send();
-    </script>
-    <script>
-        var logout = function () {
-            let user = new XMLHttpRequest();
-
-            user.open( "GET", "/v2/user/logout" );
-            user.setRequestHeader( "Content-Type", "application/x-www-form-urlencoded" );
-            user.onreadystatechange = function () {
-                if ( this.readyState === XMLHttpRequest.DONE ) {
-                    window.location.replace( this.responseText );
-                }
-            }
-            user.send();
-        }
-    </script>
-    <script>
-        var remove = function ( eventID ) {
-            let user = new XMLHttpRequest();
-
-            user.open( "GET", "/v2/user/remove/" + eventID );
-            user.setRequestHeader( "Content-Type", "application/x-www-form-urlencoded" );
-            user.onreadystatechange = function () {
-                if ( this.readyState === XMLHttpRequest.DONE ) {
-                    if ( this.status == 200 ) {
-                        let element = document.getElementById( eventID );
-                        let parent = element.parentNode;
-                        parent.removeChild( element );
-                        if ( parent.childElementCount == 1 ) {
-                            document.getElementById( "empty" ).style.display = "block";
-                        }
-                    }
-                }
-            }
-            user.send();
-        }
-    </script>
 
 </body>
 </html>
