--- a/www/event.html
+++ b/www/event.html
@@ -114,8 +114,8 @@
     <nav class="white" role="navigation">
         <div class="nav-wrapper container">
             <ul class="left">
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">Reservations</a></li>
+                <li><a href="/contactus.html">Contact us</a></li>
+                <li><a href="/reservations.html">Reservations</a></li>
             </ul>
 
         </div>
@@ -230,7 +230,7 @@
                 else {
                     let artist = JSON.parse( this.responseText )[0];
                     document.getElementById( "author" ).querySelector( "a" ).innerHTML = artist.Name;
-                    document.getElementById( "author" ).querySelector( "a" ).setAttribute( "href", "/performers/" + (typeof artist.ArtistID !== 'undefined' ? artist.ArtistID : artist.CompanyID));
+                    document.getElementById( "author" ).querySelector( "a" ).setAttribute( "href", "/performers/" + ( typeof artist.ArtistID !== 'undefined' ? artist.ArtistID : artist.CompanyID ) );
 
                 }
             }
