--- a/www/index.html
+++ b/www/index.html
@@ -96,8 +96,8 @@
     <nav class="white" role="navigation">
         <div class="nav-wrapper container">
             <ul class="left">
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">Reservations</a></li>
+                <li><a href="/contactus.html">Contact us</a></li>
+                <li><a href="/reservations.html">Reservations</a></li>
             </ul>
 
         </div>
