--- a/www/sameday.html
+++ b/www/sameday.html
@@ -81,8 +81,8 @@
     <nav class="white" role="navigation">
         <div class="nav-wrapper container">
             <ul class="left">
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">Reservations</a></li>
+                <li><a href="/contactus.html">Contact us</a></li>
+                <li><a href="/reservations.html">Reservations</a></li>
             </ul>
 
         </div>
@@ -174,19 +174,19 @@
         let Date = document.URL.substring( document.URL.lastIndexOf( '/' ) + 1 )
         document.getElementsByTagName( "h3" )[0].innerHTML = Date;
         eventer( Date );
-                    //let event = new XMLHttpRequest();
-                    //event.open( "GET", "/v2/events/" + EventID );
-                    //event.onload = function () {
-                    //    if ( this.responseText == 0 ) {
-                    //        console.log( "Server DB empy response" );
-                    //    }fffsdfss
-                    //    else {
-                    //        let event = JSON.parse( this.responseText )[0];
-                    //        document.getElementsByTagName( "h3" )[0].innerHTML = event.Date;
-                    //        eventer( event.Date );
-                    //    }
-                    //}
-                    //event.send();
+                        //let event = new XMLHttpRequest();
+                        //event.open( "GET", "/v2/events/" + EventID );
+                        //event.onload = function () {
+                        //    if ( this.responseText == 0 ) {
+                        //        console.log( "Server DB empy response" );
+                        //    }fffsdfss
+                        //    else {
+                        //        let event = JSON.parse( this.responseText )[0];
+                        //        document.getElementsByTagName( "h3" )[0].innerHTML = event.Date;
+                        //        eventer( event.Date );
+                        //    }
+                        //}
+                        //event.send();
     </script>
 
 </body>
