--- a/www/seminar.html
+++ b/www/seminar.html
@@ -94,8 +94,8 @@
     <nav class="white" role="navigation">
         <div class="nav-wrapper container">
             <ul class="left">
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">Reservations</a></li>
+                <li><a href="/contactus.html">Contact us</a></li>
+                <li><a href="/reservations.html">Reservations</a></li>
             </ul>
 
         </div>
@@ -141,7 +141,7 @@
             addr = "/v2/events/seminarbyevent/" + EventID;
         }
         else {
-            addr = "/v2/events/seminaries/" + EventID;
+            addr = "/v2/events/seminars/" + EventID;
         }
         seminar.open( "GET", addr );
         seminar.onload = function () {
